deploy/charts/templates/azuresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -f ./src/docker-compose.yml -o ./deploy/charts
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: azuresql
  name: azuresql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: azuresql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -f ./src/docker-compose.yml -o ./deploy/charts
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: azuresql
    spec:
      containers:
        - env:
            - name: ACCEPT_EULA
              value: "Y"
            - name: MSSQL_PACKAGE
              value: /backup/Blazorpong.DB.AzureSql.dacpac
            - name: MSSQL_PID
              value: Developer
            - name: MSSQL_SA_PASSWORD
              value: yourStrong(!)Password
          image: mcr.microsoft.com/azure-sql-edge
          name: azuresql
          ports:
            - containerPort: 1433
              protocol: TCP
          volumeMounts:
            - mountPath: /backup
              name: azuresql-claim0
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: azuresql-claim0
          persistentVolumeClaim:
            claimName: azuresql-claim0
            readOnly: true
