deploy/charts/templates/collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -f ./src/docker-compose.yml -o ./deploy/charts
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: collector
  name: collector
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: collector
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -f ./src/docker-compose.yml -o ./deploy/charts
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: collector
    spec:
      containers:
        - args:
            - --config=/etc/collector.yaml
          image: otel/opentelemetry-collector-contrib:latest
          name: collector
          ports:
            - containerPort: 4317
              protocol: TCP
            - containerPort: 4318
              protocol: TCP
            - containerPort: 8889
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/collector.yaml
              name: collector-claim0
      restartPolicy: Always
      volumes:
        - name: collector-claim0
          persistentVolumeClaim:
            claimName: collector-claim0
