deploy/charts/templates/dapr-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\FrancescoBelacca\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -c -f C:\Users\FrancescoBelacca\source\repos\cloudnativeblazorpong\src\docker-compose.yml -o .
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: dapr-dashboard
  name: dapr-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dapr-dashboard
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\FrancescoBelacca\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -c -f C:\Users\FrancescoBelacca\source\repos\cloudnativeblazorpong\src\docker-compose.yml -o .
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/src-default: "true"
        io.kompose.service: dapr-dashboard
    spec:
      containers:
        - args:
            - --docker-compose=true
            - --components-path=/home/nonroot/components
            - --config-path=/home/nonroot/configuration
            - --docker-compose-path=/home/nonroot/docker-compose.yml
          image: daprio/dashboard:latest
          name: dapr-dashboard
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
