deploy/charts/templates/loki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -f ./src/docker-compose.yml -o ./deploy/charts
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: loki
  name: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: loki
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -f ./src/docker-compose.yml -o ./deploy/charts
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: loki
    spec:
      containers:
        - args:
            - -config.file=/etc/loki.yaml
          image: grafana/loki:latest
          name: loki
          ports:
            - containerPort: 3100
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/loki.yaml
              name: loki-claim0
      restartPolicy: Always
      volumes:
        - name: loki-claim0
          persistentVolumeClaim:
            claimName: loki-claim0
