deploy/charts/templates/tempo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c -f ./src/docker-compose.yml -o ./deploy/charts
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: tempo
  name: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tempo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c -f ./src/docker-compose.yml -o ./deploy/charts
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: tempo
    spec:
      containers:
        - args:
            - -config.file=/etc/tempo.yaml
          image: grafana/tempo:latest
          name: tempo
          ports:
            - containerPort: 3200
              protocol: TCP
            - containerPort: 4317
              protocol: TCP
            - containerPort: 4318
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/tempo.yaml
              name: tempo-claim0
      restartPolicy: Always
      volumes:
        - name: tempo-claim0
          persistentVolumeClaim:
            claimName: tempo-claim0
