deploy/charts/templates/azuresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\FrancescoBelacca\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -c -f C:\Users\FrancescoBelacca\source\repos\cloudnativeblazorpong\src\docker-compose.yml -o .
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: azuresql
  name: azuresql
spec:
  ports:
    - name: "1433"
      port: 1433
      targetPort: 1433
  selector:
    io.kompose.service: azuresql
status:
  loadBalancer: {}
