deploy/charts/templates/signalr-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\FrancescoBelacca\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -c -f C:\Users\FrancescoBelacca\source\repos\cloudnativeblazorpong\src\docker-compose.yml -o .
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: signalr
  name: signalr
spec:
  ports:
    - name: "6351"
      port: 6351
      targetPort: 8080
    - name: "6402"
      port: 6402
      targetPort: 9090
  selector:
    io.kompose.service: signalr
status:
  loadBalancer: {}
